force-app/main/default/objects/Cycle_Event__c/fields/Any_Congenital_Malformations__c.field-meta.xml
<CustomField>
    <fullName>Any_Congenital_Malformations__c</fullName>
    <label>Any Congenital Malformations?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>