force-app/main/default/objects/Cycle_Event__c/fields/Baby_Weight_in_Grams__c.field-meta.xml
<CustomField>
    <fullName>Baby_Weight_in_Grams__c</fullName>
    <label>Baby Weight in Grams</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>