force-app/main/default/objects/Cycle_Event__c/fields/BHCG__c.field-meta.xml
<CustomField>
    <fullName>BHCG__c</fullName>
    <label>BHCG</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>