force-app/main/default/objects/Cycle_Event__c/fields/Blood_Collected_Time__c.field-meta.xml
<CustomField>
    <fullName>Blood_Collected_Time__c</fullName>
    <label>Blood Collected Time</label>
    <type>DateTime</type>
</CustomField>