force-app/main/default/objects/Cycle_Event__c/fields/Blood_Collection_Lot__c.field-meta.xml
<CustomField>
    <fullName>Blood_Collection_Lot__c</fullName>
    <label>Blood Collection Lot</label>
    <length>255</length>
    <type>Text</type>
</CustomField>