force-app/main/default/objects/Cycle_Event__c/fields/Blood_Inner__c.field-meta.xml
<CustomField>
    <fullName>Blood_Inner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blood Inner</label>
    <type>Checkbox</type>
</CustomField>