force-app/main/default/objects/Cycle_Event__c/fields/Blood_Inner_Outer__c.field-meta.xml
<CustomField>
    <fullName>Blood_Inner_Outer__c</fullName>
    <label>Blood Inner/Outer (Depreciated)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>