force-app/main/default/objects/Cycle_Event__c/fields/Blood_Outer__c.field-meta.xml
<CustomField>
    <fullName>Blood_Outer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blood Outer</label>
    <type>Checkbox</type>
</CustomField>