force-app/main/default/objects/Cycle_Event__c/fields/Booked_EPU_Time_at_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Booked_EPU_Time_at_Trigger__c</fullName>
    <label>Booked EPU Time at Trigger</label>
    <type>DateTime</type>
</CustomField>