force-app/main/default/objects/Cycle_Event__c/fields/Catheter__c.field-meta.xml
<CustomField>
    <fullName>Catheter__c</fullName>
    <label>Catheter</label>
    <length>20</length>
    <type>Text</type>
</CustomField>