force-app/main/default/objects/Cycle_Event__c/fields/Date_and_Time_of_Embryo_Glue__c.field-meta.xml
<CustomField>
    <fullName>Date_and_Time_of_Embryo_Glue__c</fullName>
    <label>Date and Time of Embryo Glue</label>
    <type>DateTime</type>
</CustomField>