force-app/main/default/objects/Cycle_Event__c/fields/Date_of_Neonatal_Death__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Neonatal_Death__c</fullName>
    <inlineHelpText>To be recorded if the baby died within 28 days of birth</inlineHelpText>
    <label>Date of Neonatal Death</label>
    <type>Date</type>
</CustomField>