force-app/main/default/objects/Cycle_Event__c/fields/Date_of_Termination__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Termination__c</fullName>
    <label>Date of Termination</label>
    <type>Date</type>
</CustomField>