force-app/main/default/objects/Cycle_Event__c/fields/Dish_Move_Witness__c.field-meta.xml
<CustomField>
    <fullName>Dish_Move_Witness__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dish Move Witness</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cycle_Events6</relationshipName>
    <type>Lookup</type>
</CustomField>