force-app/main/default/objects/Cycle_Event__c/fields/Dish_Move_Witness_Text__c.field-meta.xml
<CustomField>
    <fullName>Dish_Move_Witness_Text__c</fullName>
    <formula>Dish_Move_Witness__r.FirstName &amp;&quot; &quot;&amp; Dish_Move_Witness__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dish Move Witness</label>
    <type>Text</type>
</CustomField>