force-app/main/default/objects/Cycle_Event__c/fields/Doctor__c.field-meta.xml
<CustomField>
    <fullName>Doctor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doctor</label>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipLabel>Cycle Events (Doctor)</relationshipLabel>
    <relationshipName>Cycle_Events1</relationshipName>
    <type>Lookup</type>
</CustomField>