force-app/main/default/objects/Cycle_Event__c/fields/Egg_Cohort__c.field-meta.xml
<CustomField>
    <fullName>Egg_Cohort__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Egg Cohort</label>
    <referenceTo>Egg_Cohort__c</referenceTo>
    <relationshipLabel>Cycle Events</relationshipLabel>
    <relationshipName>Cycle_Events</relationshipName>
    <type>Lookup</type>
</CustomField>