force-app/main/default/objects/Cycle_Event__c/fields/Egg_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Egg_Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Egg Recipient</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cycle Events</relationshipLabel>
    <relationshipName>Cycle_Events</relationshipName>
    <type>Lookup</type>
</CustomField>