force-app/main/default/objects/Cycle_Event__c/fields/Embryo__c.field-meta.xml
<CustomField>
    <fullName>Embryo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Embryo</label>
    <referenceTo>Embryos__c</referenceTo>
    <relationshipLabel>Cycle Events</relationshipLabel>
    <relationshipName>Cycle_Events</relationshipName>
    <type>Lookup</type>
</CustomField>