force-app/main/default/objects/Cycle_Event__c/fields/Embryo_Glue_Used__c.field-meta.xml
<CustomField>
    <fullName>Embryo_Glue_Used__c</fullName>
    <label>Embryo Glue Used</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>