force-app/main/default/objects/Cycle_Event__c/fields/Embryo_Retained__c.field-meta.xml
<CustomField>
    <fullName>Embryo_Retained__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Embryo Retained</label>
    <type>Checkbox</type>
</CustomField>