force-app/main/default/objects/Cycle_Event__c/fields/EMT__c.field-meta.xml
<CustomField>
    <fullName>EMT__c</fullName>
    <label>EMT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>