force-app/main/default/objects/Cycle_Event__c/fields/ET_At_1__c.field-meta.xml
<CustomField>
    <fullName>ET_At_1__c</fullName>
    <label>ET at 1</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>