force-app/main/default/objects/Cycle_Event__c/fields/ET_at_2__c.field-meta.xml
<CustomField>
    <fullName>ET_at_2__c</fullName>
    <label>ET at 2</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>