force-app/main/default/objects/Cycle_Event__c/fields/Event_Date_Only__c.field-meta.xml
<CustomField>
    <fullName>Event_Date_Only__c</fullName>
    <formula>DATEVALUE( Event_Date_and_Time__c )</formula>
    <label>Event Date Only</label>
    <type>Date</type>
</CustomField>