force-app/main/default/objects/Cycle_Event__c/fields/Event_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Record_Type_Name__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Record Type Name</label>
    <type>Text</type>
</CustomField>