force-app/main/default/objects/Cycle_Event__c/fields/Expiry__c.field-meta.xml
<CustomField>
    <fullName>Expiry__c</fullName>
    <label>Expiry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>