force-app/main/default/objects/Cycle_Event__c/fields/Follicle_Scan_Summary_Right__c.field-meta.xml
<CustomField>
    <fullName>Follicle_Scan_Summary_Right__c</fullName>
    <label>Follicle Scan Summary Right</label>
    <length>255</length>
    <type>Text</type>
</CustomField>