force-app/main/default/objects/Cycle_Event__c/fields/Follicles_Left__c.field-meta.xml
<CustomField>
    <fullName>Follicles_Left__c</fullName>
    <label>Follicles Left</label>
    <length>255</length>
    <type>Text</type>
</CustomField>