force-app/main/default/objects/Cycle_Event__c/fields/Follicles_Right__c.field-meta.xml
<CustomField>
    <fullName>Follicles_Right__c</fullName>
    <label>Follicles Right</label>
    <length>255</length>
    <type>Text</type>
</CustomField>