force-app/main/default/objects/Cycle_Event__c/fields/Freeze_Kit__c.field-meta.xml
<CustomField>
    <fullName>Freeze_Kit__c</fullName>
    <label>Freeze Kit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>