force-app/main/default/objects/Cycle_Event__c/fields/Hospital_Admission__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Admission__c</fullName>
    <label>Hospital Admission</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>