force-app/main/default/objects/Cycle_Event__c/fields/Kit_Batch_Number__c.field-meta.xml
<CustomField>
    <fullName>Kit_Batch_Number__c</fullName>
    <label>Kit Batch Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>