force-app/main/default/objects/Cycle_Event__c/fields/Kit_Witness__c.field-meta.xml
<CustomField>
    <fullName>Kit_Witness__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kit Witness</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cycle_Events4</relationshipName>
    <type>Lookup</type>
</CustomField>