force-app/main/default/objects/Cycle_Event__c/fields/KJET_Bath__c.field-meta.xml
<CustomField>
    <fullName>KJET_Bath__c</fullName>
    <label>KJET Batch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>