force-app/main/default/objects/Cycle_Event__c/fields/Maternal_Pregnancy_complications__c.field-meta.xml
<CustomField>
    <fullName>Maternal_Pregnancy_complications__c</fullName>
    <label>Any maternal pregnancy complications?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>