force-app/main/default/objects/Cycle_Event__c/fields/Morbidity_Information__c.field-meta.xml
<CustomField>
    <fullName>Morbidity_Information__c</fullName>
    <label>Morbidity Information</label>
    <type>TextArea</type>
</CustomField>