force-app/main/default/objects/Cycle_Event__c/fields/Mucus_Inner__c.field-meta.xml
<CustomField>
    <fullName>Mucus_Inner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mucus Inner</label>
    <type>Checkbox</type>
</CustomField>