force-app/main/default/objects/Cycle_Event__c/fields/Mucus_Inner_Outer__c.field-meta.xml
<CustomField>
    <fullName>Mucus_Inner_Outer__c</fullName>
    <label>Mucus Inner/Outer (Deprecated)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>