force-app/main/default/objects/Cycle_Event__c/fields/Mucus_Outer__c.field-meta.xml
<CustomField>
    <fullName>Mucus_Outer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mucus Outer</label>
    <type>Checkbox</type>
</CustomField>