force-app/main/default/objects/Cycle_Event__c/fields/Multiple_baby_birth__c.field-meta.xml
<CustomField>
    <fullName>Multiple_baby_birth__c</fullName>
    <label>Multiple-baby birth?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>