force-app/main/default/objects/Cycle_Event__c/fields/Neupogen_Batch__c.field-meta.xml
<CustomField>
    <fullName>Neupogen_Batch__c</fullName>
    <label>Neupogen Batch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>