force-app/main/default/objects/Cycle_Event__c/fields/Neupogen_Exp__c.field-meta.xml
<CustomField>
    <fullName>Neupogen_Exp__c</fullName>
    <label>Neupogen Exp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>