force-app/main/default/objects/Cycle_Event__c/fields/Number_of_Blast_Embryos_Transfered__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Blast_Embryos_Transfered__c</fullName>
    <label>Number of Blast Embryos Transfered</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>