force-app/main/default/objects/Cycle_Event__c/fields/Number_of_Cleavage_Slow_Frozen__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Cleavage_Slow_Frozen__c</fullName>
    <label>Number of Cleavage Slow Frozen</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>