force-app/main/default/objects/Cycle_Event__c/fields/Number_of_Eggs_Inseminated_with_IVF__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Eggs_Inseminated_with_IVF__c</fullName>
    <label>Number of Eggs Inseminated with IVF</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>