force-app/main/default/objects/Cycle_Event__c/fields/Number_of_Embryos_Thawed__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Embryos_Thawed__c</fullName>
    <label>Number of Embryos Thawed</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>