force-app/main/default/objects/Cycle_Event__c/fields/Number_of_Foetal_Sacs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Foetal_Sacs__c</fullName>
    <label>Number of Foetal Sacs</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>