force-app/main/default/objects/Cycle_Event__c/fields/Obturator__c.field-meta.xml
<CustomField>
    <fullName>Obturator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Obturator</label>
    <type>Checkbox</type>
</CustomField>