force-app/main/default/objects/Cycle_Event__c/fields/OHSS_Recorded__c.field-meta.xml
<CustomField>
    <fullName>OHSS_Recorded__c</fullName>
    <label>OHSS Recorded</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>