force-app/main/default/objects/Cycle_Event__c/fields/OPU_Tube_Dish_Witness__c.field-meta.xml
<CustomField>
    <fullName>OPU_Tube_Dish_Witness__c</fullName>
    <label>Tube/Dish Witness</label>
    <length>255</length>
    <type>Text</type>
</CustomField>