force-app/main/default/objects/Cycle_Event__c/fields/Patient_ID_Witness_1__c.field-meta.xml
<CustomField>
    <fullName>Patient_ID_Witness_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient ID Witness 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cycle_Events7</relationshipName>
    <type>Lookup</type>
</CustomField>