force-app/main/default/objects/Cycle_Event__c/fields/Patient_ID_Witness_2__c.field-meta.xml
<CustomField>
    <fullName>Patient_ID_Witness_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient ID Witness 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cycle_Events8</relationshipName>
    <type>Lookup</type>
</CustomField>