force-app/main/default/objects/Cycle_Event__c/fields/Patient_ID_Witness_3_TEXT__c.field-meta.xml
<CustomField>
    <fullName>Patient_ID_Witness_3_TEXT__c</fullName>
    <formula>Patient_ID_Witness_3__r.FirstName &amp;&quot; &quot;&amp; Patient_ID_Witness_3__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient ID Witness 3</label>
    <type>Text</type>
</CustomField>