force-app/main/default/objects/Cycle_Event__c/fields/Photo_Id_Checked__c.field-meta.xml
<CustomField>
    <fullName>Photo_Id_Checked__c</fullName>
    <label>Photo Id Checked?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Sighted</fullName>
            </value>
            <value>
                <fullName>Uploaded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>