force-app/main/default/objects/Cycle_Event__c/fields/Post_Thaw_Embryo_Details__c.field-meta.xml
<CustomField>
    <fullName>Post_Thaw_Embryo_Details__c</fullName>
    <label>Post Thaw Embryo Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>