force-app/main/default/objects/Cycle_Event__c/fields/Pregnancy_Result_at_Time_of_Test__c.field-meta.xml
<CustomField>
    <fullName>Pregnancy_Result_at_Time_of_Test__c</fullName>
    <label>Pregnancy Result at Time of Test</label>
    <length>255</length>
    <type>Text</type>
</CustomField>