force-app/main/default/objects/Cycle_Event__c/fields/PRP_Prep_Finish_Time__c.field-meta.xml
<CustomField>
    <fullName>PRP_Prep_Finish_Time__c</fullName>
    <label>PRP Prep Finish Time</label>
    <type>DateTime</type>
</CustomField>