force-app/main/default/objects/Cycle_Event__c/fields/PRP_Tube_Lot__c.field-meta.xml
<CustomField>
    <fullName>PRP_Tube_Lot__c</fullName>
    <label>PRP Tube Lot</label>
    <length>255</length>
    <type>Text</type>
</CustomField>