force-app/main/default/objects/Cycle_Event__c/fields/Reason_Insem_Method_Changed__c.field-meta.xml
<CustomField>
    <fullName>Reason_Insem_Method_Changed__c</fullName>
    <label>Reason Insem Method Changed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>