force-app/main/default/objects/Cycle_Event__c/fields/Reduction__c.field-meta.xml
<CustomField>
    <fullName>Reduction__c</fullName>
    <label>Was Reduction Undertaken?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>