force-app/main/default/objects/Cycle_Event__c/fields/Referral_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Referral_Expiry__c</fullName>
    <description>Date of referral expiry on day 1</description>
    <label>Referral Expiry</label>
    <type>Date</type>
</CustomField>