force-app/main/default/objects/Cycle_Event__c/fields/Referring_Doctor__c.field-meta.xml
<CustomField>
    <fullName>Referring_Doctor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referring Doctor</label>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipLabel>Cycle Events</relationshipLabel>
    <relationshipName>Cycle_Events</relationshipName>
    <type>Lookup</type>
</CustomField>