force-app/main/default/objects/Cycle_Event__c/fields/Scan_Performed_Externally__c.field-meta.xml
<CustomField>
    <fullName>Scan_Performed_Externally__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scan Performed Externally</label>
    <type>Checkbox</type>
</CustomField>