force-app/main/default/objects/Cycle_Event__c/fields/Scientist__c.field-meta.xml
<CustomField>
    <fullName>Scientist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scientist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cycle_Events1</relationshipName>
    <type>Lookup</type>
</CustomField>