force-app/main/default/objects/Cycle_Event__c/fields/Second_Witness__c.field-meta.xml
<CustomField>
    <fullName>Second_Witness__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Second Witness</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cycle_Events5</relationshipName>
    <type>Lookup</type>
</CustomField>