force-app/main/default/objects/Cycle_Event__c/fields/Semen_Patient_ID_Witnesses__c.field-meta.xml
<CustomField>
    <fullName>Semen_Patient_ID_Witnesses__c</fullName>
    <label>Patient ID Witnesses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>