force-app/main/default/objects/Cycle_Event__c/fields/Semen_Prep_Witnesses__c.field-meta.xml
<CustomField>
    <fullName>Semen_Prep_Witnesses__c</fullName>
    <label>Semen Prep Witnesses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>