force-app/main/default/objects/Cycle_Event__c/fields/Semen_Quality__c.field-meta.xml
<CustomField>
    <fullName>Semen_Quality__c</fullName>
    <formula>Semen_Sample__r.Total_Sperm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Semen Quality</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>