force-app/main/default/objects/Cycle_Event__c/fields/Semen_Sample_Received_By__c.field-meta.xml
<CustomField>
    <fullName>Semen_Sample_Received_By__c</fullName>
    <label>Semen Sample Received By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>