force-app/main/default/objects/Cycle_Event__c/fields/Sonographer__c.field-meta.xml
<CustomField>
    <fullName>Sonographer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sonographer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cycle_Events3</relationshipName>
    <type>Lookup</type>
</CustomField>