force-app/main/default/objects/Cycle_Event__c/fields/Sound__c.field-meta.xml
<CustomField>
    <fullName>Sound__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sound</label>
    <type>Checkbox</type>
</CustomField>