force-app/main/default/objects/Cycle_Event__c/fields/Syringe_Batch__c.field-meta.xml
<CustomField>
    <fullName>Syringe_Batch__c</fullName>
    <label>Syringe Batch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>