force-app/main/default/objects/Cycle_Event__c/fields/Tenaculum__c.field-meta.xml
<CustomField>
    <fullName>Tenaculum__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tenaculum</label>
    <type>Checkbox</type>
</CustomField>