force-app/main/default/objects/Cycle_Event__c/fields/Theatre_Temperature__c.field-meta.xml
<CustomField>
    <fullName>Theatre_Temperature__c</fullName>
    <label>Theatre Temperature</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>