force-app/main/default/objects/Cycle_Event__c/fields/Transfered_Embryos_Treated_with_ICSI__c.field-meta.xml
<CustomField>
    <fullName>Transfered_Embryos_Treated_with_ICSI__c</fullName>
    <label>Transfered Embryos Treated with ICSI?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>