force-app/main/default/objects/Cycle_Event__c/fields/Tube_Id__c.field-meta.xml
<CustomField>
    <fullName>Tube_Id__c</fullName>
    <label>Tube Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>